solved scrollbar issue in login page

--- a/src/app/auth/user-login/user-login.component.css
+++ b/src/app/auth/user-login/user-login.component.css
@@ -5,10 +5,13 @@
     border-top-left-radius: 35px;
     border-bottom-left-radius: 35px;
     height: 98vh;
+    float: right;
 }
 
 .section-left {
     width: 50%;
+    float: left;
+    min-height: 20px;
 }
 
 .links {
@@ -49,9 +52,10 @@ input.ng-invalid.ng-touched {
         border-radius: 35px;
         height: 400px;
         /* margin: 25px 41px 0px 41px; */
-        margin-right: 41px;
+        /* margin-right: 41px; */
         margin-left: 41px;
         margin-top: 45%;
+        margin-right: 9.5%;
         margin-bottom: 45%;
     }
 
@@ -77,6 +81,7 @@ input.ng-invalid.ng-touched {
 
     .section-left {
         width: 0%;
+        height: 0px;
     }
 }
 
